--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,15 @@ body{background-color: lightgoldenrodyellow;}
 <title>Style test</title>
 <style type="text/css">
 h1{font-size: 30px; 
-color: salmon;
+color:salmon;
 }
+h1{color:salmon;}
 h2{font-size: 20px;
 color: red;
 font-style:oblique; 
 }
-h2{color: green;
-}
 .big{font-size: 60px;}
-.uppercase{color:navy;
+.uppercase{color:green;
 text-transform: uppercase;}
 .big.uppercase{color:yellow;}
 h1 span{color:violet;}			
